Fixes nav z-index

--- a/src/components/Nav/styles.scss
+++ b/src/components/Nav/styles.scss
@@ -11,7 +11,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 100;
+  z-index: 100000;
   width: 100%;
 
   box-shadow: 0 0 1px $light-text-color;
